[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/AutoLoad/SnackBar.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/JosefinSansRegular-x3LYV.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="SnackBar" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -172.0
margin_top = -58.0
margin_right = 172.0
margin_bottom = -10.0
rect_min_size = Vector2( 355, 48 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 355, 48 )
color = Color( 0.196078, 0.196078, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 355, 48 )
custom_constants/margin_right = 8
custom_constants/margin_top = 6
custom_constants/margin_left = 16
custom_constants/margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
margin_left = 16.0
margin_top = 6.0
margin_right = 347.0
margin_bottom = 42.0
custom_constants/separation = 0

[node name="MessageLabel" type="Label" parent="Control/MarginContainer/HBoxContainer"]
margin_right = 256.0
margin_bottom = 36.0
rect_min_size = Vector2( 246, 36 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Message to display."
valign = 1
autowrap = true
clip_text = true

[node name="Button" type="Button" parent="Control/MarginContainer/HBoxContainer"]
margin_left = 256.0
margin_right = 331.0
margin_bottom = 36.0
rect_min_size = Vector2( 75, 36 )
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.745098, 0.258824, 0.0627451, 1 )
enabled_focus_mode = 0
text = "ACTION"
flat = true

[node name="Timer" type="Timer" parent="Control"]
wait_time = 4.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
anims/fade_in = SubResource( 3 )
anims/fade_out = SubResource( 4 )

[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Control/Timer" to="." method="_on_Timer_timeout"]
